[project]
name = "meowth"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Leonardo Raggio", email = "leonardo.raggio@gmail.com"},
]
dependencies = [
    "streamlit>=1.34.0",
    "pydantic>=2.7.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
